--- a/index.html
+++ b/index.html
@@ -244,14 +244,44 @@
           </div>
         </div>
 
-        <div class="row row">
-          <div class="col"></div>
+        <div class="row row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1 justify-content-center">
+          <div class="col mt-4 mygallery">
+            <a href="https://picsum.photos/id/90/1200/700" data-toggle="lightbox" data-caption="Photo 1" data-gallery="myGallery">
+              <img src="https://picsum.photos/id/90/300/300" alt="Photo 1" class="img-fluid rounded w-100" />
+            </a>
+          </div>
+          <div class="col mt-4">
+            <a href="https://picsum.photos/id/91/1200/700" data-toggle="lightbox" data-caption="Photo 2" data-gallery="myGallery">
+              <img src="https://picsum.photos/id/91/300/300" alt="Photo 2" class="img-fluid rounded w-100" />
+            </a>
+          </div>
+          <div class="col mt-4">
+            <a href="https://picsum.photos/id/92/1200/700" data-toggle="lightbox" data-caption="Photo 3" data-gallery="myGallery">
+              <img src="https://picsum.photos/id/92/300/300" alt="Photo 3" class="img-fluid rounded w-100" />
+            </a>
+          </div>
+          <div class="col mt-4">
+            <a href="https://picsum.photos/id/93/1200/700" data-toggle="lightbox" data-caption="Photo 4" data-gallery="myGallery">
+              <img src="https://picsum.photos/id/93/300/300" alt="Photo 4" class="img-fluid rounded w-100" />
+            </a>
+          </div>
+          <div class="col mt-4">
+            <a href="https://picsum.photos/id/94/1200/700" data-toggle="lightbox" data-caption="Photo 5" data-gallery="myGallery">
+              <img src="https://picsum.photos/id/94/300/300" alt="Photo 5" class="img-fluid rounded w-100" />
+            </a>
+          </div>
+          <div class="col mt-4">
+            <a href="https://picsum.photos/id/98/1200/500" data-toggle="lightbox" data-caption="Photo 6" data-gallery="myGallery">
+              <img src="https://picsum.photos/id/98/300/300" alt="Photo 6" class="img-fluid rounded w-100" />
+            </a>
+          </div>
         </div>
       </div>
     </section>
     <!-- Akhir Gallery -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js"></script>
     <script>
       simplyCountdown(".simply-countdown", {
         year: 2027, // required
